remove much user_credit stuff in profile

--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -20,7 +20,6 @@ template(name='profile_layout')
                         .ui.inline.header() #{points}pts
                         // .ui.label {{to_percent one_ratio}}% ratio
                         // .ui.label #{flow_volume} volume
-                        .ui.small.inline.header #{boops}
                         .ui.label #{profile_views} views
                         // +user_follow_button
                         // .ui.button.join
@@ -43,10 +42,6 @@ template(name='profile_layout')
                             if currentUser
                                 // div
                                 +user_friend_button 
-                        if i_have_points
-                            .ui.button.send(title='send points')
-                                i.gift.large.icon
-                                span send pts
                         with data
                             .ui.list
                                 .item #{total_karma} total karma
@@ -71,30 +66,15 @@ template(name='profile_layout')
                                 i.chat.large.icon
                                 |#{user_comment_count}
                                 // span comments
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}" title="#{user.username} credits")
-                                i.large.chevron.down.icon
-                                // span pts received
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/sent" class="{{isActiveRoute 'user_sent'}}" title="#{user.username} sent")
-                                i.large.gift.icon
-                                // span pts sent
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/received" class="{{isActiveRoute 'user_received'}}" title="#{user.username} received")
-                                i.large.dollar.icon
-                                // span credit
                             a.ui.disabled.icon.large.button.select_term.no_blink(href="/u/#{username}/upvoted" class="{{isActiveRoute 'user_upvoted'}}" title="#{user.username} upvoted")
                                 i.large.chevron.up.icon
                                 // span upvoted
                             a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/downvoted" class="{{isActiveRoute 'user_downvoted'}}" title="#{user.username} downvoted")
                                 i.large.chevron.down.icon
                                 // span downvoted
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/tips" class="{{isActiveRoute 'user_tips'}}" title="#{user.username} tips")
-                                i.donate.large.icon
-                                // span tips
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/groups" class="{{isActiveRoute 'user_groups'}}" title="#{user.username} groups")
-                                i.users.large.icon
-                                // span groups
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/bounties" class="{{isActiveRoute 'user_bounties'}}" title="#{user.username} bounties")
-                                i.hand.holding.large.icon
-                                // span bounties
+                            // a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/groups" class="{{isActiveRoute 'user_groups'}}" title="#{user.username} groups")
+                            //     i.users.large.icon
+                            //     // span groups
                             if is_current_user
                                 a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}" title="#{user.username} friends")
                                     i.users.large.icon
@@ -168,106 +148,7 @@ template(name='user_dashboard')
                 .ui.feed
                     each feed_items 
                         +feed_item
-                .ui.two.column.stackable.grid
-                    .column.smallscroll
-                        .ui.header bounties from
-                        .ui.divided.list
-                            each bounties_from
-                                .ui.item
-                                    // if is_author
-                                    //     +session_edit_toggle
-                                    //     if is_editing_this
-                                    //         +text_edit key='description' direct=true
-                                    //         +number_edit key='karma_bounty' direct=true
-                                    .ui.inline.header #{description}
-                                    .ui.inline.header #{karma_bounty}
-                                    // +boolean_view key='require_view' label='view' icon='eye' icon_only=true
-                                    // +boolean_view key='require_vote' label='vote' icon='thumbs up' icon_only=true
-                                    // +boolean_view key='require_reply' label='reply' icon='reply' icon_only=true
-                                    if require_view
-                                        +boolean_view key='view_requirement_met' label='view requirement met' icon_only=true icon='eye'
-                                    if require_vote
-                                        +boolean_view key='vote_requirement_met' label='vote requirement met' icon_only=true icon='thumbs up'
-                                    if require_reply
-                                        +boolean_view key='reply_requirement_met' label='reply requirement met' icon_only=true icon='reply'
-                                    +target_info
-                                    if is_admin
-                                        +print_this
-                                    .ui.label #{status}
-                                    a.ui.icon.button(href="/b/#{_id}")
-                                        i.chevron.right.icon
-                                    a.item(href="/b/#{_id}")
-                                        |#{when} 
-                                        +print_this
-                    .column.smallscroll
-                        .ui.header bounties to
-                        .ui.divided.list
-                            each bounties_to
-                                .ui.item
-                                    if is_author
-                                        +session_edit_toggle
-                                        if is_editing_this
-                                            +text_edit key='description' direct=true
-                                            +number_edit key='karma_bounty' direct=true
-                                    .ui.inline.header #{description}
-                                    .ui.inline.header #{karma_bounty}
-                                    // +boolean_view key='require_view' label='view' icon='eye' icon_only=true
-                                    // +boolean_view key='require_vote' label='vote' icon='thumbs up' icon_only=true
-                                    // +boolean_view key='require_reply' label='reply' icon='reply' icon_only=true
-                                    if require_view
-                                        +boolean_view key='view_requirement_met' label='view requirement met' icon_only=true icon='eye'
-                                    if require_vote
-                                        +boolean_view key='vote_requirement_met' label='vote requirement met' icon_only=true icon='thumbs up'
-                                    if require_reply
-                                        +boolean_view key='reply_requirement_met' label='reply requirement met' icon_only=true icon='reply'
-                                    +target_info
-                                    +print_this
-                                    +author_info
-                                    .ui.label #{status}
-                                    a.ui.icon.button(href="/b/#{_id}")
-                                        i.chevron.right.icon
-                                a.item(href="/b/#{_id}")
-                                    |#{when} 
-                                    +print_this
                 if currentUser
-                    .ui.two.column.stackable.grid
-                        .column
-                            a.ui.inline.spaced.header(href="/u/#{username}/debits")
-                                i.chevron.up.icon
-                                |karma sent
-                                |#{total_debit_amount}p
-                                // |sent
-                                small(title='debit count') (#{debit_count}x)
-                                small(title='rank') ##{global_debit_count_rank}
-                            each debit_tags
-                                .ui.small.label #{title} 
-                                    // small #{count}
-                            .ui.list.selection.animated.smallscroll
-                                each user_karma_sent
-                                    a.item(href="/debit/#{_id}/view") #{title} #{amount} #{points} #{when}, #{description}
-                                        each tags
-                                            .ui.small.label #{this}
-                                        +target_info
-                        .column
-                            a.ui.inline.header(href="/u/#{username}/credits")
-                                i.chevron.down.large.icon
-                                |karma received
-                                |#{total_credit_amount}p
-                                // |received
-                                small(title='received count') (#{credit_count}x) 
-                                small(title='rank') ##{global_credit_count_rank}
-                            each credit_tags
-                                .ui.small.label #{title}
-                            .ui.selection.animated.list.smallscroll
-                                each user_karma_received
-                                    a.item(href="/debit/#{_id}/view")
-                                        .header #{points}: #{title}
-                                        |#{description} #{amount} 
-                                        small #{when}
-                                        each tags
-                                            .ui.small.label #{this}
-                                        +author_info
-                        
                     // .ui.small.header 
                     //     label goto/create group
                     // .ui.input
@@ -391,28 +272,6 @@ template(name='user_vault')
                         .ui.mini.label #{this}
 
 
-template(name='user_tips')
-    .ui.header 
-        i.donate.icon
-        |tips
-    .ui.link.list.scrolling
-        each tips
-            a.ui.item(href="/p/#{parent_id}") 
-                if parent.image_id
-                    a(href="/p/#{_id}")
-                        img.ui.small.image(src="{{c.url image_id }}" class=currentUser.invert_class)
-                if parent.image_link
-                    img(src=parent.image_link)
-                .content
-                    .header #{parent.title} 
-                    .header #{amount} 
-                    |#{parent.when} #{when}
-                    each parent.seven_tags
-                        .ui.mini.label #{this}
-
-
-
-
 template(name='user_comments')
     .ui.header 
         i.comment.icon
@@ -432,11 +291,6 @@ template(name='user_comments')
 
 
 
-template(name='user_tip_small')
-    a.ui.item(href="/tip/#{_id}/view") 
-        |#{title} #{when} #{amount} #{parent_id}
-        each tags 
-            .ui.mini.label #{this}
 
 template(name='user_comment_small')
     |#{body}
@@ -501,36 +355,3 @@ template(name='user_bookmarks_widget')
     .medscroll.ui.segments
         each user_bookmark_docs
             .ui.header #{title}
-
-
-
-template(name='user_credit_segment')
-    .ui.segment.user_credit_segment.pointer.zoom
-        .header
-            strong #{amount}pt 
-            // |from 
-            if author.profile_image_id
-                img.ui.avatar.image(src="{{c.url author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-            |#{_author.shortname}
-        small #{when}
-        div
-        |#{description}
-        div
-        each tags
-            .ui.mini.label #{this}
-
-
-template(name='user_debit_segment')
-    .ui.segment.user_debit_segment.pointer.zoom
-        .header
-            strong #{amount}pt
-            | to 
-            if target.profile_image_id
-                img.ui.avatar.image(src="{{c.url target.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-            |#{target.shortname}
-        small #{when}
-        div
-        |#{description}
-        div
-        each tags
-            .ui.mini.label #{this}
