--- a/parts/reddit/reddit.jade
+++ b/parts/reddit/reddit.jade
@@ -1,5 +1,5 @@
 template(name='reddit')
-    .ui.stackable.padded.grid
+    .ui.stackable.grid
         .twelve.wide.column
             if picked_tags
                 // if skv_is 'nightmode' true
@@ -22,68 +22,7 @@ template(name='reddit')
                 each result_rtags
                     // .ui.label #{this}
                     +tag_picker
-            else
-                .ui.center.aligned.basic.segment
-                    .ui.icon.big.input
-                        i.search.large.icon
-                        input.search_tag(type='text' placeholder='reddit search' autofocus='')
-                        // .ui.label #{this}
-                    +search_shortcut tag='math' icon='calculator'
-                    +search_shortcut tag='camping' icon='campground'
-                    +search_shortcut tag='business' icon='briefcase'
-                    +search_shortcut tag='environment' icon='leaf'
-                    +search_shortcut tag='money' icon='coins'
-                    +search_shortcut tag='cat' icon='cat'
-                    +search_shortcut tag='science' icon='flask'
-                    +search_shortcut tag='video' icon='video'
-                    +search_shortcut tag='gaming' icon='gamepad'
-                    +search_shortcut tag='pics' icon='images'
-                    +search_shortcut tag='medicine' icon='pills'
-                    +search_shortcut tag='chess' icon='chess'
-                    +search_shortcut tag='food' icon='food'
-                    +search_shortcut tag='beer' icon='beer'
-                    +search_shortcut tag='hotel' icon='bed'
-                    +search_shortcut tag='winter' icon='snowflake'
-                    +search_shortcut tag='photography' icon='camera'
-                    +search_shortcut tag='dog' icon='dog'
-                    +search_shortcut tag='covid' icon='radiation'
-                    +search_shortcut tag='cheese' icon='cheese'
-                    +search_shortcut tag='solar' icon='sun'
-                    +search_shortcut tag='women' icon='venus'
-                    +search_shortcut tag='men' icon='mars'
-                    +search_shortcut tag='dungeons & dragons' icon='dice d20'
-                    +search_shortcut tag='physics' icon='atom'
-                    +search_shortcut tag='law' icon='balance scale'
-                    +search_shortcut tag='books' icon='book'
-                    +search_shortcut tag='biking' icon='biking'
-                    +search_shortcut tag='news' icon='newspaper'
-                    +search_shortcut tag='music' icon='music'
-                    +search_shortcut tag='skiing' icon='skiing'
-                    +search_shortcut tag='pizza' icon='pizza slice'
-                    +search_shortcut tag='fish' icon='fish'
-                    +search_shortcut tag='gardening' icon='seedling'
-                    +search_shortcut tag='bible' icon='bible'
-                    +search_shortcut tag='daoism' icon='yin yang'
-                    +search_shortcut tag='car' icon='car'
-                    +search_shortcut tag='tarot' icon='moon'
-            // if skv_is 'view_layout' 'grid'
-                // if one_post
-                //     .ui.stackable.one.column.grid
-                //         each rposts
-                //             +post_card
-                        
-                // // else if two_posts
-                // //     .ui.stackable.two.centered.column.grid
-                // //         each rposts
-                // //             +post_card
-                // else
-                    // else if three_posts
-                // .ui.stackable.three.column.grid.scrolling
-                //     each rposts
-                //         +post_card
-            // img(src=data.banner_img)
-            // img(src=banner_background_image)
-            each reddit_result_rtags
+            each result_tags
                 // .ui.label #{this}
                 +tag_picker
                 // .ui.large.label(title=count) #{name}
@@ -152,8 +91,23 @@ template(name='reddit')
             if skv_is 'view_sidebar' true
                 +reddit_leftbar
         if picked_tags
-            .ui.twelve.wide.column                
+            .ui.sixteen.wide.column                
                 .scrolling
+                    if skv_is 'view_layout' 'grid'
+                        if one_post
+                            .ui.stackable.one.column.grid
+                                each rposts
+                                    +post_card
+                                
+                        else if two_posts
+                            .ui.stackable.two.centered.column.grid
+                                each rposts
+                                    +post_card
+                        else
+                            else if three_posts
+                        .ui.stackable.three.column.grid.scrolling
+                            each rposts
+                                +post_card
                     if rposts
                         if skv_is 'reddit_view_layout' 'grid'
                             .ui.centered.four.stackable.cards 
@@ -166,8 +120,8 @@ template(name='reddit')
                         .ui.basic.center.aligned.segment
                             i.big.loading.yin.yang.icon
 
-        .four.wide.column
-            +rrightbar
+        // .four.wide.column
+        //     +rrightbar
    
 template(name='reddit_post_card')
     .ui.card
@@ -186,7 +140,7 @@ template(name='reddit_post_card')
             a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                 img.ui.inline.zoomer.image.toggle_view(src=watson.metadata.image)
         else if data.thumbnail.length
-            |thumbnail
+            // |thumbnail
             a.view_post(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                 img.ui.inline.zoomer.image.zoomer(src=data.thumbnail)    
         // else if data.thumbnail.length
