working post view from home click

--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -5,8 +5,8 @@ template(name='nav')
     
         a.icon.item.blink.clear(href="/" class="{{isActiveRoute regex='home'}}")
             i.yin.yang.big.icon
-        a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
-            i.search.large.icon
+        // a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
+        //     i.search.large.icon
         a.icon.item.blink.clear(href="/subs" class="{{isActiveRoute 'subs'}}")
             i.reddit.large.icon
         a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
